--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@brammitch/plotly-react": "0.1.3",
     "@mantine/core": "4.2.12",
     "@mantine/hooks": "4.2.12",
     "@mantine/next": "4.2.12",
+    "@types/lodash.uniq": "4.5.7",
+    "lodash.uniq": "4.5.0",
     "next": "12.2.0",
     "next-themes": "0.2.0",
     "react": "18.2.0",
